<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_lighter"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_tool_bar" />

    <RelativeLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/toolbar">

        <EditText
            android:id="@+id/key_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_shape"
            android:hint="@string/login_username_hint"
            android:paddingLeft="10dp"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/username"
        android:layout_marginTop="15dp">


        <EditText
            android:id="@+id/pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_shape"
            android:hint="@string/login_password_hint"
            android:paddingLeft="10dp"
            android:textSize="13sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login_app" />


</RelativeLayout>
