<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_press"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.SignupActivity">

    <LinearLayout
        android:id="@+id/id_signup_rootview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_tool_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/login_username_hint"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textColor="@color/global_text_color"
                android:textColorHint="@color/global_text_hint_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <EditText
                    android:id="@+id/pwd_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/login_password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxEms="8"
                    android:textColor="@color/global_text_color"
                    android:textColorHint="#777777" />

            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <EditText
                    android:id="@+id/pwd_ensure"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/password_ensure_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/global_text_color"
                    android:textColorHint="#777777" />

            </FrameLayout>

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/global_button_color_yellow"
                android:text="@string/signup" />

        </LinearLayout>


    </LinearLayout>
</FrameLayout>